[package]
name = "robusta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "tracing", "macros"] }
kvvliveapi = { git = "https://github.com/CodeAssemblingChicken/kvvliveapi-rs", version = "0.1.0" }
specta = "1.0.5"
tokio = { version = "1.33.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["async-await"] }
