[package]
name = "robusta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "tracing", "macros"] }
chrono = "0.4.31"
chrono-tz = "0.8.4"
futures-util = "0.3.28"
trias = { path = "../trias" }
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.17"
urlencoding = "2.1.3"
dotenv = "0.15.0"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tower = "0.4.13"
specta = { version = "1.0.5", features = ["export"] }
lazy_static = "1.4.0"
