[package]
name = "trias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["derive"] }
serde-xml-rs = "0.6.0"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"
